# weibo-trending

./: .gitattributes  README.md  pyproject.toml  requirements.txt  scrape.py
src/weibo_trending/: __init__.py  __main__.py
test/: comment-with-replies.json  comments.json  response.json  test_parser.py
